# lane-detection-and-steering-pipeline

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
ros2_ws/src/lane_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/lane_interfaces/msg/: LaneOffset.msg
ros2_ws/src/lane_pipeline/: package.xml  setup.cfg  setup.py
ros2_ws/src/lane_pipeline/lane_pipeline/: camera_node.py  control_node.py  lane_detection_core.py  perception_node.py  visualizer_node.py
ros2_ws/src/lane_pipeline/launch/: pipeline.launch.py
scripts/: python-test.txt  video-install.txt
src/: lane_detection.py
